Moved all handling of ErrorListener references to the trax code. Completed support for StreamSource input to the newTemplates() and newTransformer() methods of TransformerFactory. Also, added support for SAXSource. The Parser, XSLTC, Import, Include, Stylesheet and DocumentCall classes from the xsltc.compiler package were all modified to accomodate this. PR:		n/a Obtained from:	n/a Submitted by:	morten@xml.apache.org Reviewed by:	morten@xml.apache.org
git-svn-id: https://svn.apache.org/repos/asf/xalan/java/trunk@335231 13f79535-47bb-0310-9956-ffa450edef68